--- a/src/dev.scss
+++ b/src/dev.scss
@@ -9,6 +9,9 @@ ul,li{list-style: none;}
 .mr5_>*{
   margin-right: 5px;
 }
+.dib_>*{
+  display: inline-block;
+}
 .hello-react-digital{
   padding:50px 20px;
 
