--- a/public/assets/style.scss
+++ b/public/assets/style.scss
@@ -1,50 +1,33 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-html,
-body,
-#app,
-.app-container {
-  height: 100%;
-}
-
 @import "@/components/style.scss";
-.dib {
-  display: inline-block;
-}
-.mr5_ > * {
-  margin-right: 5px;
-}
-.dib_ > * {
-  display: inline-block;
-}
+@import "~@jswork/react-github-corner/dist/style.scss";
+@import "~@jswork/react-sw-update-tips/dist/style.scss";
+@import "~@jswork/react-demokit/dist/style.scss";
 
 .app-container {
-  padding: 50px;
-  box-sizing: border-box;
-  > .react-digital {
+  .dib {
+    display: inline-block;
+  }
+  .mr5_ > * {
+    margin-right: 5px;
+  }
+  .dib_ > * {
+    display: inline-block;
+  }
+
+  .react-digital {
     font-size: 14px;
     display: inline-block;
     margin-right: 8px;
     color: #f60;
   }
-  .button {
-    background: #3cc51f;
-    width: 100%;
-    display: block;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    color: #fff;
+
+  .is-body {
     padding: 20px;
-    border: none;
-
-    &:active {
-      background: darken(#3cc51f, 10%);
-    }
-
-    &:focus {
-      outline: none;
-    }
+    background: #fff;
+    width: 50%;
+    min-width: 320px;
+    margin: 0 auto;
+    padding-top: 100px;
+    text-align: center;
   }
 }
